[tool.poetry]
name = "notebook"
version = "0.1.0"
description = "Fine-tune GPT-4 on your own data"
authors = ['Nguyen Xuan Nhan <nguyenxuannhan407@gmail.com>']
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
