[tool.coverage.run]
branch = true
source = ["chat-svc"]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:'../../../coverage//apps/api/chat-svc/html' --cov-report xml:'../../../coverage//apps/api/chat-svc/coverage.xml' --html='../../../reports//apps/api/chat-svc/unittests/html/index.html' --junitxml='../../../reports//apps/api/chat-svc/unittests/junit.xml'"

[tool.poetry]
name = "chat-svc"
version = "1.0.0"
description = "Chat service"
authors = ['Nguyen Xuan Nhan <nguyenxuannhan407@gmail.com>']
license = 'MIT'

[[tool.poetry.packages]]
include = "chat-svc"

[tool.poetry.dependencies]
python = ">=3.9 <=3.12"

[tool.poetry.group.dev.dependencies]
autopep8 = "2.0.2"
flake8 = "6.0.0"
pytest = "7.3.1"
pytest-sugar = "0.9.7"
pytest-cov = "4.1.0"
pytest-html = "3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
