[tool.coverage.run]
branch = true
source = [ "search_svc" ]

[tool.coverage.report]
exclude_lines = [ "if TYPE_CHECKING:" ]
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:'../../../coverage/apps/api/searching-svc/html' --cov-report xml:'../../../coverage/apps/api/searching-svc/coverage.xml' --html='../../../reports/apps/api/searching-svc/unittests/html/index.html' --junitxml='../../../reports/apps/api/searching-svc/unittests/junit.xml'"

[tool.poetry]
name = "searching-svc"
version = "1.0.0"
description = "Searching service"
authors = [ "Hutech University <hutech@hutech.edu.vn>" ]
license = "MIT"
group = { }

  [[tool.poetry.packages]]
  include = "search_svc"

  [tool.poetry.dependencies]
  python = ">=3.9 <=3.12"
  grpcio = "^1.59.3"
  grpcio-tools = "^1.59.3"
  pydantic = "1.10.0"
  protobuf = "^4.25.1"
  python-dotenv = "^1.0.0"

    [tool.poetry.dependencies.farm-haystack]
    extras = [ "faiss-gpu" ]
    version = "^1.22.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.nx]
autoActivate = true

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
