[tool.coverage.run]
branch = true
source = ["proc"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:'../../../coverage//apps/nlp/proc/html' --cov-report xml:'../../../coverage//apps/nlp/proc/coverage.xml' --html='../../../reports//apps/nlp/proc/unittests/html/index.html' --junitxml='../../../reports//apps/nlp/proc/unittests/junit.xml'"

[tool.poetry]
name = "proc"
version = "1.0.0"
description = "Data Crawling and Processing"
authors = ["Hutech University <hutech@hutech.edu.vn>"]
license = "MIT"
group = {}

[[tool.poetry.packages]]
include = "proc"

[tool.poetry.dependencies]
python = ">=3.9 <=3.12"
bs4 = "^0.0.1"
selenium = "^4.15.2"
tqdm = "^4.66.1"
pandas = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
