[tool.coverage.run]
branch = true
source = ["processor"]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:'../../../coverage//apps/nlp/processor/html' --cov-report xml:'../../../coverage//apps/nlp/processor/coverage.xml' --html='../../../reports//apps/nlp/processor/unittests/html/index.html' --junitxml='../../../reports//apps/nlp/processor/unittests/junit.xml'"

[tool.poetry]
name = "processor"
version = "1.0.0"
description = "Data Crawling and Processing"
authors = ["Hutech University <hutech@hutech.edu.vn>"]
license = "MIT"

[[tool.poetry.packages]]
include = "processor"

[tool.poetry.dependencies]
python = ">=3.9 <=3.12"
bs4 = "^0.0.1"
selenium = "^4.15.2"
tqdm = "^4.66.1"
pandas = "^2.1.3"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "2.0.2"
isort = "5.13.2"
flake8 = "6.0.0"
pytest = "7.3.1"
pytest-sugar = "0.9.7"
pytest-cov = "4.1.0"
pytest-html = "3.2.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
